[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/Kenney Blocks.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://menu/menu-ui/level-button-font.tres" type="DynamicFont" id=3]
[ext_resource path="res://menu/menu-ui/level-ui.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 2 )

[node name="LevelUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
margin_bottom = 130.0
mouse_filter = 2
custom_constants/margin_top = 32
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="LabelContainer"]
margin_top = 32.0
margin_right = 1024.0
margin_bottom = 162.0
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="LabelContainer/CenterContainer"]
margin_left = 284.0
margin_right = 740.0
margin_bottom = 130.0

[node name="Label" type="Label" parent="LabelContainer/CenterContainer/VBoxContainer"]
margin_right = 456.0
margin_bottom = 72.0
custom_fonts/font = SubResource( 1 )
text = "Select a level"

[node name="Button" type="Button" parent="LabelContainer/CenterContainer/VBoxContainer"]
margin_top = 76.0
margin_right = 456.0
margin_bottom = 130.0
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 2 )
text = "Return to menu"
flat = true

[node name="LevelContainer" type="MarginContainer" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -121.0
margin_bottom = 121.0
custom_constants/margin_top = 48
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="LevelContainer"]
margin_top = 48.0
margin_right = 1024.0
margin_bottom = 346.0

[node name="GridContainer" type="GridContainer" parent="LevelContainer/CenterContainer"]
margin_left = 408.0
margin_right = 616.0
margin_bottom = 298.0
custom_constants/vseparation = 32
custom_constants/hseparation = 32
columns = 3

[node name="Level1" type="Button" parent="LevelContainer/CenterContainer/GridContainer"]
margin_right = 48.0
margin_bottom = 78.0
mouse_default_cursor_shape = 2
custom_fonts/font = ExtResource( 3 )
disabled = true
text = "1"
flat = true

[node name="Level2" type="Button" parent="LevelContainer/CenterContainer/GridContainer"]
margin_left = 80.0
margin_right = 128.0
margin_bottom = 78.0
mouse_default_cursor_shape = 2
custom_fonts/font = ExtResource( 3 )
disabled = true
text = "2"
flat = true

[node name="Level3" type="Button" parent="LevelContainer/CenterContainer/GridContainer"]
margin_left = 160.0
margin_right = 208.0
margin_bottom = 78.0
mouse_default_cursor_shape = 2
custom_fonts/font = ExtResource( 3 )
disabled = true
text = "3"
flat = true

[node name="Level4" type="Button" parent="LevelContainer/CenterContainer/GridContainer"]
margin_top = 110.0
margin_right = 48.0
margin_bottom = 188.0
mouse_default_cursor_shape = 2
custom_fonts/font = ExtResource( 3 )
disabled = true
text = "4"
flat = true

[node name="Level5" type="Button" parent="LevelContainer/CenterContainer/GridContainer"]
margin_left = 80.0
margin_top = 110.0
margin_right = 128.0
margin_bottom = 188.0
mouse_default_cursor_shape = 2
custom_fonts/font = ExtResource( 3 )
disabled = true
text = "5"
flat = true

[node name="Level6" type="Button" parent="LevelContainer/CenterContainer/GridContainer"]
margin_left = 160.0
margin_top = 110.0
margin_right = 208.0
margin_bottom = 188.0
mouse_default_cursor_shape = 2
custom_fonts/font = ExtResource( 3 )
disabled = true
text = "6"
flat = true

[node name="Level7" type="Button" parent="LevelContainer/CenterContainer/GridContainer"]
margin_top = 220.0
margin_right = 48.0
margin_bottom = 298.0
mouse_default_cursor_shape = 2
custom_fonts/font = ExtResource( 3 )
disabled = true
text = "7"
flat = true

[node name="Level8" type="Button" parent="LevelContainer/CenterContainer/GridContainer"]
margin_left = 80.0
margin_top = 220.0
margin_right = 128.0
margin_bottom = 298.0
mouse_default_cursor_shape = 2
custom_fonts/font = ExtResource( 3 )
disabled = true
text = "8"
flat = true

[node name="Level9" type="Button" parent="LevelContainer/CenterContainer/GridContainer"]
margin_left = 160.0
margin_top = 220.0
margin_right = 208.0
margin_bottom = 298.0
mouse_default_cursor_shape = 2
custom_fonts/font = ExtResource( 3 )
disabled = true
text = "9"
flat = true

[connection signal="pressed" from="LabelContainer/CenterContainer/VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="LevelContainer/CenterContainer/GridContainer/Level1" to="." method="_on_Level_pressed" binds= [ 1 ]]
[connection signal="pressed" from="LevelContainer/CenterContainer/GridContainer/Level2" to="." method="_on_Level_pressed" binds= [ 2 ]]
[connection signal="pressed" from="LevelContainer/CenterContainer/GridContainer/Level3" to="." method="_on_Level_pressed" binds= [ 3 ]]
[connection signal="pressed" from="LevelContainer/CenterContainer/GridContainer/Level4" to="." method="_on_Level_pressed" binds= [ 4 ]]
[connection signal="pressed" from="LevelContainer/CenterContainer/GridContainer/Level5" to="." method="_on_Level_pressed" binds= [ 5 ]]
[connection signal="pressed" from="LevelContainer/CenterContainer/GridContainer/Level6" to="." method="_on_Level_pressed" binds= [ 6 ]]
[connection signal="pressed" from="LevelContainer/CenterContainer/GridContainer/Level7" to="." method="_on_Level_pressed" binds= [ 7 ]]
[connection signal="pressed" from="LevelContainer/CenterContainer/GridContainer/Level8" to="." method="_on_Level_pressed" binds= [ 8 ]]
[connection signal="pressed" from="LevelContainer/CenterContainer/GridContainer/Level9" to="." method="_on_Level_pressed" binds= [ 9 ]]
